--- a/vignettes/multiple-endpoints.Rmd
+++ b/vignettes/multiple-endpoints.Rmd
@@ -30,8 +30,7 @@ library(nlmixr)
 ## These options cache the models and the model simulations in R
 ## To run the actual models on your system, take the save options off.
 options(nlmixr.save=TRUE,
-        nlmixr.save.dir=system.file(package="nlmixr"));
-invisible(memoise::cache_filesystem(file.path(system.file(package="nlmixr"),"memo")))
+        nlmixr.save.dir=system.file(package="nlmixr.examples"));
 ```
 
 In this example, we have a transit-compartment (from depot to gut to
@@ -323,16 +322,48 @@ pk.turnover.emax3 <- function() {
     effect ~ add(pdadd.err) | pca
   })
 }
-fit.TOS <- nlmixr(pk.turnover.emax3, warfarin, "saem");
+```
+## Run the models with SAEM
+```{r}
+fit.TOS <- nlmixr(pk.turnover.emax3, warfarin, "saem", control=list(print=0));
 print(fit.TOS);
+```
+### SAEM Diagnostic plots
+```{r}
+library(ggplot2)
+
 plot(fit.TOS);
-library(ggplot2);
-library(gridExtra);
-v1 <- vpc(fit.TOS, show=list(obs_dv=T), scales="free_y") +
+
+
+v1s <- vpc(fit.TOS, show=list(obs_dv=T), scales="free_y") +
     ylab("Warfarin Cp [mg/L] or PCA") +
     xlab("Time [h]");
-v2 <- vpc(fit.TOS, show=list(obs_dv=T), pred_corr = TRUE) +
+v2s <- vpc(fit.TOS, show=list(obs_dv=T), pred_corr = TRUE) +
     ylab("Prediction Corrected Warfarin Cp [mg/L] or PCA") +
     xlab("Time [h]");
-grid.arrange(v1,v2);
+
+gridExtra::grid.arrange(v1s, v2s)
+```
+
+## FOCEi fits
+
+```{r}
+## FOCEi fit/vpcs
+fit.TOF <- nlmixr(pk.turnover.emax3, warfarin, "focei", control=list(print=0));
+```
+
+### FOCEi Diagnostic Plots
+
+```{r}
+print(fit.TOF)
+plot(fit.TOF)
+
+v1f <- vpc(fit.TOF, show=list(obs_dv=T), scales="free_y") +
+    ylab("Warfarin Cp [mg/L] or PCA") +
+    xlab("Time [h]");
+v2f <- vpc(fit.TOF, show=list(obs_dv=T), pred_corr = TRUE) +
+        ylab("Prediction Corrected Warfarin Cp [mg/L] or PCA") +
+    xlab("Time [h]")
+
+gridExtra::grid.arrange(v1f, v2f)
 ```
